test/compile_errors/stage1/obj/invalid_pointer_syntax.zig
export fn foo() void {
    var guid: *:0 const u8 = undefined;
}

// invalid pointer syntax
//
// tmp.zig:2:16: error: expected type expression, found ':'
